modifica read tweet + test libreria NLP

--- a/progetto C#.csproj
+++ b/progetto C#.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="mongocsharpdriver" Version="2.19.2" />
     <PackageReference Include="MySql.Data" Version="8.0.11" />
+    <PackageReference Include="OpenNLP.NET" Version="1.9.4.1" />
   </ItemGroup>
 
 </Project>
