--- a/progetto C#.csproj
+++ b/progetto C#.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="mongocsharpdriver" Version="2.19.2" />
     <PackageReference Include="MySql.Data" Version="8.0.11" />
     <PackageReference Include="OpenNLP.NET" Version="1.9.4.1" />
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+    <PackageReference Include="WordCloudSharp" Version="1.1.0" />
   </ItemGroup>
 
 </Project>
